clusters/apps/workloads/mealie/06-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.apps.froggyleonard.com`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
